<resources>
    <string name="app_name">Textual RPG</string>
    <string name="action_settings">Settings</string>
    <string name="continue_game">Continue</string>
    <string name="new_game">New Game</string>
    <string name="quit_game">Quit Game</string>
    <string name="sleep">Sleep</string>
    <string name="fire">Fire</string>
    <string name="stone">Stone</string>
    <string name="hunt">Hunt</string>
    <string name="inventory">Inventory</string>
    <string name="wood">Wood</string>
    <string name="fishing">Fishing</string>
    <string name="craft">Craft</string>
    <string name="sticks">Sticks</string>
    <string name="explore">Explore</string>
    <string name="water">Water</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="shelter">Shelter</string>
    <string name="fireplace">Fire Place</string>
    <string name="fishingRod">Fishing Rod</string>
    <string name="stoneAxe">Stone Axe</string>
    <string name="arrow">Arrow</string>
    <string name="spear">Spear</string>
    <string name="snareTrap">Snare Trap</string>
    <string name="bait">Bait</string>
    <string name="bow">Bow</string>
    <string name="baitPouch">Bait Pouch</string>
    <string name="arrowQuiver">Arrow Quiver</string>
    <string name="bandage">Bandage</string>
    <string name="fishTrap">Fish Trap</string>
    <string name="medicine">Medicine</string>
    <string name="torch">Torch</string>
    <string name="hydration">Hydration</string>
    <string name="energy">Energy</string>
    <string name="body_heat">Body Heat</string>
    <string name="torch_time">Torch:</string>
</resources>
