<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/startGameFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end" />

            <TextView
                android:id="@+id/txtGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />

            <TextView
                android:id="@+id/lblTorchTime"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/torch_time" />

            <TextView
                android:id="@+id/txtTorchTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHydration"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hydration" />

            <TextView
                android:id="@+id/lblEnergy"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/energy" />

            <TextView
                android:id="@+id/lblBodyHeat"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/body_heat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtHydration"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/txtEnergy"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/txtBodyHeat"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSleep"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sleep" />

            <TextView
                android:id="@+id/txtFire"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fire" />

            <TextView
                android:id="@+id/txtStone"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageBtnSleep"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnFire"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnStone"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtHunt"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hunt" />

            <TextView
                android:id="@+id/txtInventory"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/inventory" />

            <TextView
                android:id="@+id/txtWood"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wood" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageBtnHunt"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnInventory"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnWood"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFishing"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fishing" />

            <TextView
                android:id="@+id/txtCraft"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/craft" />

            <TextView
                android:id="@+id/txtSticks"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sticks" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageBtnFishing"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnCraft"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnSticks"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTorch"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/torch" />

            <TextView
                android:id="@+id/txtExplore"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/explore" />

            <TextView
                android:id="@+id/txtWater"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/water" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageBtnTorch"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnExplore"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageBtnWater"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:src="?android:attr/windowBackground" />

            <TextView
                android:id="@+id/txtOutput"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="Fragment Start Game" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close" />
        </LinearLayout>

</LinearLayout>