<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/crafting_Fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/txtFirPlace"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fireplace" />

                <TextView
                    android:id="@+id/txtFishingRod"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fishingRod" />

                <TextView
                    android:id="@+id/txtShelter"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/shelter" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageBtnFirePlace"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnFishingRod"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnShelter"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtStoneAxe"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/stoneAxe" />

                <TextView
                    android:id="@+id/txtTorch"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/torch" />

                <TextView
                    android:id="@+id/txtArrow"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageBtnStoneAxe"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:src="@mipmap/rest_foreground" />

                <ImageButton
                    android:id="@+id/imageBtnTorch"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnArrow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtSpear"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/spear" />

                <TextView
                    android:id="@+id/txtSnareTrap"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/snareTrap" />

                <TextView
                    android:id="@+id/txtBait"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bait" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageBtnSpear"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnSnareTrap"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnBait"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtBow"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bow" />

                <TextView
                    android:id="@+id/txtFishTrap"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fishTrap" />

                <TextView
                    android:id="@+id/txtMedicine"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/medicine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageBtnBow"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnFishTrap"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnMedicine"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtBandage"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bandage" />

                <TextView
                    android:id="@+id/txtArrowQuiver"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/arrowQuiver" />

                <TextView
                    android:id="@+id/txtBaitPouch"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/baitPouch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageBtnBandage"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnArrowQuiver"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

                <ImageButton
                    android:id="@+id/imageBtnBaitPouch"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="?android:attr/windowBackground"
                    android:contentDescription="TODO"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:paddingTop="30dp">

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/close" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>